added more content to project pages

--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
         </div>
         <div class="item-details">
           <span class="item-details__title title--overhead">Call</span>
-          <span class="item-details__text">469.371.1192</span>
+          <span class="item-details__text">(469) 371-1192</span>
         </div>
         <div class="item-details">
           <span class="item-details__title title--overhead">Find Me On</span>
@@ -287,6 +287,43 @@
       </div>
     </div>
     <!-- /Awards -->
+
+    <!-- Footer -->
+    <footer class="footer">
+      <!-- <div class="row text-lg-center">
+        <ul
+          class="col-12 col-md-12 col-lg-4 col-xl-4 listContact list-unstyled js-lines"
+        >
+          <li><h6 class="title title--h6">EMAIL</h6></li>
+          <li>
+            <a href="mailto:hello@ogonnaya.com?Subject=Hello" target="_blank"
+              >hello@ogonnaya.com</a
+            >
+          </li>
+        </ul>
+        <ul
+          class="col-12 col-md-6 col-lg-4 col-xl-4 listContact list-unstyled js-lines"
+        >
+          <li><h6 class="title title--h6">CALL ME</h6></li>
+          <li>(469) 371-1192</li>
+        </ul>
+        <ul
+          class="col-12 col-md-6 col-lg-4 col-xl-4 listContact list-unstyled js-lines"
+        >
+          <li><h6 class="title title--h6">FIND ME ON</h6></li>
+          <li>
+            <a class="link_decoration" href="https:/linkedin.com/in/okalu"
+              >LinkedIn</a
+            >
+            and
+            <a class="link_decoration" href="https://github.com/Ogonnaya"
+              >Github</a
+            >
+          </li>
+        </ul>
+      </div> -->
+    </footer>
+    <!-- /Footer -->
 
     <!-- Menu -->
     <div class="menu">
