--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
       <div class="row flex-fill justify-content-center align-items-md-center">
         <div class="col-12 col-lg-10 col-xl-8 contect-block js-block">
           <h2 class="title title--h3 text-lg-center js-lines">
-            Just a form. It’s easy.
+            Say hello.
           </h2>
           <form id="contact-form" class="contact-form" data-toggle="validator">
             <div class="row">
@@ -134,7 +134,7 @@
                     class="textarea"
                     id="message"
                     name="message"
-                    placeholder="Comment"
+                    placeholder="Message"
                     rows="1"
                     required="required"
                     oninvalid="setCustomValidity('Fill in the field')"
@@ -162,30 +162,29 @@
         <ul
           class="col-12 col-md-12 col-lg-4 col-xl-4 listContact list-unstyled js-lines"
         >
-          <li><h6 class="title title--h6">OFFICE</h6></li>
-          <li>23400 S Western Ave,</li>
-          <li>Harbor City, CA 90710</li>
+          <li><h6 class="title title--h6">EMAIL</h6></li>
+          <li><a href="mailto:hello@ogonnaya.com?Subject=Hello" target="_blank"
+            >hello@ogonnaya.com</a
+          ></li>
         </ul>
         <ul
           class="col-12 col-md-6 col-lg-4 col-xl-4 listContact list-unstyled js-lines"
         >
-          <li><h6 class="title title--h6">START A CONVERSATION</h6></li>
-          <li>hello@example.com</li>
-          <li>+1 (00) 123-45-67</li>
+          <li><h6 class="title title--h6">CALL ME</h6></li>
+          <li>(469) 371-1192</li>
         </ul>
         <ul
           class="col-12 col-md-6 col-lg-4 col-xl-4 listContact list-unstyled js-lines"
         >
-          <li><h6 class="title title--h6">FOLLOW US</h6></li>
+          <li><h6 class="title title--h6">FIND ME ON</h6></li>
           <li>
-            Connect with me on <a class="link_decoration" href="">LinkedIn</a>
-          </li>
-          <li>
+            <a class="link_decoration" href="https:/linkedin.com/in/okalu"
+              >LinkedIn</a
+            >
+            or
             <a class="link_decoration" href="https://github.com/Ogonnaya"
               >Github</a
             >
-            or
-            <a class="link_decoration" href="">instagram</a>
           </li>
         </ul>
       </div>
