--- a/projects/crystal-collector.html
+++ b/projects/crystal-collector.html
@@ -264,11 +264,11 @@
 
       <!-- Page nav -->
       <nav class="page-nav">
-        <a class="btn-link" href="/projects/small-business-checking.html"
-          ><i class="circle circle--left icon-left-open"></i>Prev: Small
-          Business Checking Application</a
+        <a class="btn-link" href="./mortgage.html"
+          ><i class="circle circle--left icon-left-open"></i>Prev: Mortgage
+          Application</a
         >
-        <a class="btn-link" href="/projects/trivia.html"
+        <a class="btn-link" href="./trivia.html"
           >Next: Random Trivia<i
             class="circle circle--right icon-right-open"
           ></i
