--- a/projects/mortgage.html
+++ b/projects/mortgage.html
@@ -111,7 +111,7 @@
         <!-- Details -->
         <div class="case-details">
           <div class="item-details">
-            <span class="item-details__title title--overhead">Client</span>
+            <span class="item-details__title title--overhead">Team</span>
             <span class="item-details__text">BBVA Mortgage Team</span>
           </div>
           <div class="item-details">
@@ -125,9 +125,9 @@
             >
           </div>
           <div class="item-details item-details--end">
-            <a class="btn-link" href="photo_viewer.html"
+            <!-- <a class="btn-link" href="photo_viewer.html"
               >See Website<i class="circle circle--right icon-right-open"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <!-- /Details -->
@@ -256,7 +256,7 @@
       </figure>
       <!-- /Image -->
 
-      <div class="caption-single container">
+      <!-- <div class="caption-single container">
         <div class="row">
           <div class="col-12 col-md-6 award-item">
             <h4 class="title title--h6 js-lines">AWWWARDS</h4>
@@ -267,7 +267,7 @@
             <div class="js-lines">Site of the Day — Dec 2017</div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Page nav -->
       <nav class="page-nav">
