--- a/projects/smart-assistant.html
+++ b/projects/smart-assistant.html
@@ -22,35 +22,31 @@
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="../../assets/images/favicons/apple-touch-icon-144x144.png"
+      href="../assets/images/favicons/apple-touch-icon-144x144.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="../../assets/images/favicons/apple-touch-icon-114x114.png"
+      href="../assets/images/favicons/apple-touch-icon-114x114.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="../../assets/images/favicons/apple-touch-icon-72x72.png"
+      href="../assets/images/favicons/apple-touch-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="../../assets/images/favicons/apple-touch-icon-57x57.png"
+      href="../assets/images/favicons/apple-touch-icon-57x57.png"
     />
     <link
       rel="shortcut icon"
-      href="../../assets/images/favicons/favicon.png"
+      href="../assets/images/favicons/favicon.png"
       type="image/png"
     />
 
     <!-- Styles -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../../assets/styles/style.css"
-    />
+    <link rel="stylesheet" type="text/css" href="../assets/styles/style.css" />
   </head>
   <body>
     <!-- Preloader -->
@@ -58,7 +54,7 @@
       <div class="preloader__wrap">
         <img
           class="preloader__logo"
-          src="../../assets/images/logo_white_preloader.svg"
+          src="../assets/images/logo_white_preloader.svg"
           alt="OGONNAYA"
         />
         <div class="preloader__progress"><span></span></div>
@@ -68,13 +64,13 @@
     <!-- Top -->
     <nav class="navbar navbar-back">
       <div class="mr-auto logo-container">
-        <a class="btn-link" href="../../projects.html"
+        <a class="btn-link" href="../projects.html"
           ><i class="circle icon-left-open"></i
         ></a>
-        <a class="logo-link" href="index.html">
+        <a class="logo-link" href="../index.html">
           <img
             class="logotype"
-            src="../../assets/images/logo_white.svg"
+            src="../assets/images/logo_white.svg"
             alt="OGONNAYA"
           />
         </a>
@@ -105,7 +101,7 @@
       <figure class="image-container jarallax reveal">
         <img
           class="jarallax-img cover"
-          src="../../assets/img/cover-project.jpg"
+          src="../assets/img/cover-project.jpg"
           alt=""
         />
       </figure>
@@ -163,7 +159,7 @@
 
       <!-- Image -->
       <figure class="image-container image-container--gutters reveal">
-        <img class="cover" src="../../assets/img/image_project_03.jpg" alt="" />
+        <img class="cover" src="../assets/img/image_project_03.jpg" alt="" />
       </figure>
       <!-- /Image -->
 
@@ -199,19 +195,19 @@
             <div class="swiper-slide">
               <div
                 class="cover-slider"
-                data-bg="../../assets/img/image_single_01.jpg"
+                data-bg="../assets/img/image_single_01.jpg"
               ></div>
             </div>
             <div class="swiper-slide">
               <div
                 class="cover-slider"
-                data-bg="../../assets/img/image_single_01.jpg"
+                data-bg="../assets/img/image_single_01.jpg"
               ></div>
             </div>
             <div class="swiper-slide">
               <div
                 class="cover-slider"
-                data-bg="../../assets/img/image_single_01.jpg"
+                data-bg="../assets/img/image_single_01.jpg"
               ></div>
             </div>
           </div>
@@ -256,30 +252,18 @@
 
       <!-- Image -->
       <figure class="image-container reveal">
-        <img class="cover" src="../../assets/img/image_project_07.jpg" alt="" />
+        <img class="cover" src="../assets/img/image_project_07.jpg" alt="" />
       </figure>
       <!-- /Image -->
 
-      <div class="caption-single container">
-        <div class="row">
-          <div class="col-12 col-md-6 award-item">
-            <h4 class="title title--h6 js-lines">AWWWARDS</h4>
-            <div class="js-lines">Site of the Day — Dec 2017</div>
-          </div>
-          <div class="col-12 col-md-6 award-item">
-            <h4 class="title title--h6 js-lines">CSSDesignAwards</h4>
-            <div class="js-lines">Site of the Day — Dec 2017</div>
-          </div>
-        </div>
-      </div>
-
       <!-- Page nav -->
       <nav class="page-nav">
-        <a class="btn-link" href="#"
-          ><i class="circle circle--left icon-left-open"></i>Prev project</a
+        <a class="btn-link" href="./brand.html"
+          ><i class="circle circle--left icon-left-open"></i>Prev: Brand
+          Experience</a
         >
-        <a class="btn-link" href="../Smart Assistant/projects_single.html"
-          >Next: Smart Assistant<i
+        <a class="btn-link" href="./mortgage.html"
+          >Next: Mortgage Application<i
             class="circle circle--right icon-right-open"
           ></i
         ></a>
@@ -293,17 +277,17 @@
       <div class="menu-inner">
         <ul class="menu-list">
           <li>
-            <a class="menu-list__item" href="../../projects.html"
+            <a class="menu-list__item" href="../projects.html"
               ><span>projects</span></a
             >
           </li>
           <li>
-            <a class="menu-list__item" href="../../about.html"
+            <a class="menu-list__item" href="../about.html"
               ><span>about</span></a
             >
           </li>
           <li>
-            <a class="menu-list__item" href="../../contact.html"
+            <a class="menu-list__item" href="../contact.html"
               ><span>contact</span></a
             >
           </li>
@@ -313,7 +297,7 @@
         <a
           class="social__link"
           target="_blank"
-          href="./assets/Ogonnaya_UX_Designer.pdf"
+          href="../assets/Ogonnaya_UX_Designer.pdf"
           >RESUME</a
         >
         <a class="social__link" href="https://linkedin.com/in/okalu"
@@ -328,8 +312,8 @@
     <div class="cursor"></div>
 
     <!-- JavaScripts -->
-    <script src="../../assets/js/jquery-3.3.1.min.js"></script>
-    <script src="../../assets/js/plugins.js"></script>
-    <script src="../../assets/js/common.js"></script>
+    <script src="../assets/js/jquery-3.3.1.min.js"></script>
+    <script src="../assets/js/plugins.js"></script>
+    <script src="../assets/js/common.js"></script>
   </body>
 </html>
