--- a/projects.html
+++ b/projects.html
@@ -348,8 +348,8 @@
             <h2 class="title title--h5 item-news__title">
               <a href="./projects/zona11.html"
                 ><span class="hover-line"
-                  >Creating a digital & revitalization strategy for the Zona 11
-                  neighborhood in the city of Eixample, Barcelona.</span
+                  >Reinventing the neighborhood experience and promoting
+                  economic growth in Eixample, Barcelona.</span
                 ></a
               >
             </h2>
@@ -387,62 +387,37 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12 col-md-6 footer__left">
-            <div>
-              <h6 class="title title--h6 weight--300 mb--2">
-                Sign up for our newsletter.
-              </h6>
-              <!-- Newsletter -->
-              <div class="form-group">
-                <form class="newsletter-form" data-toggle="validator">
-                  <div class="form-inline newsletter-form__row">
-                    <input
-                      type="email"
-                      class="inputText inputText--fill"
-                      placeholder="Enter your email..."
-                      required
-                      autocomplete="off"
-                    />
-                    <button type="submit" class="btn btn__icon btn--white ">
-                      <i class="icon-arrow-right"></i>
-                    </button>
-                  </div>
-                  <div
-                    id="validator-newsletter"
-                    class="form-result text-center"
-                  ></div>
-                </form>
-              </div>
-              <!-- /Newsletter -->
-            </div>
-          </div>
-
-          <div class="col-12 col-md-6 footer__right">
-            <ul class="listContact list-unstyled">
-              <li><h6 class="title title--h6">OFFICE</h6></li>
-              <li>23400 S Western Ave,<br />Harbor City, CA 90710</li>
-            </ul>
-            <ul class="listContact list-unstyled">
-              <li><h6 class="title title--h6">GET IN TOUCH</h6></li>
-              <li>hello@example.com</li>
-              <li>+1 (00) 123-45-67</li>
-            </ul>
-            <ul class="listContact list-unstyled">
-              <li><h6 class="title title--h6">FOLLOW US</h6></li>
-              <li>
-                Connect with me on
-                <a class="link_decoration" href="">facebook</a>,<br /><a
-                  class="link_decoration"
-                  href=""
-                  >twitter</a
-                >
-                or <a class="link_decoration" href="">instagrem</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+      <div class="row text-lg-center">
+        <ul
+          class="col-12 col-md-12 col-lg-4 col-xl-4 listContact list-unstyled js-lines"
+        >
+          <li><h6 class="title title--h6">EMAIL</h6></li>
+          <li>
+            <a href="mailto:hello@ogonnaya.com?Subject=Hello" target="_blank"
+              >hello@ogonnaya.com</a
+            >
+          </li>
+        </ul>
+        <ul
+          class="col-12 col-md-6 col-lg-4 col-xl-4 listContact list-unstyled js-lines"
+        >
+          <li><h6 class="title title--h6">CALL ME</h6></li>
+          <li>(469) 371-1192</li>
+        </ul>
+        <ul
+          class="col-12 col-md-6 col-lg-4 col-xl-4 listContact list-unstyled js-lines"
+        >
+          <li><h6 class="title title--h6">FIND ME ON</h6></li>
+          <li>
+            <a class="link_decoration" href="https:/linkedin.com/in/okalu"
+              >LinkedIn</a
+            >
+            or
+            <a class="link_decoration" href="https://github.com/Ogonnaya"
+              >Github</a
+            >
+          </li>
+        </ul>
       </div>
     </footer>
     <!-- /Footer -->
