--- a/projects/brand.html
+++ b/projects/brand.html
@@ -127,9 +127,9 @@
             <span class="item-details__text">UX & Visual Design</span>
           </div>
           <div class="item-details item-details--end">
-            <a class="btn-link" href="https://brand.bbvaexperience.com/en/"
+            <!-- <a class="btn-link" href="https://brand.bbvaexperience.com/en/"
               >See Website<i class="circle circle--right icon-right-open"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <!-- /Details -->
@@ -260,10 +260,11 @@
 
       <!-- Page nav -->
       <nav class="page-nav">
-        <a class="btn-link" href="#"
-          ><i class="circle circle--left icon-left-open"></i>Prev project</a
+        <a class="btn-link" href="./subway-study.html"
+          ><i class="circle circle--left icon-left-open"></i>Prev: NYC Subway
+          Study</a
         >
-        <a class="btn-link" href="../Smart Assistant/projects_single.html"
+        <a class="btn-link" href="./smart-assistant.html"
           >Next: Smart Assistant<i
             class="circle circle--right icon-right-open"
           ></i
