--- a/projects/hackable-cities.html
+++ b/projects/hackable-cities.html
@@ -93,10 +93,10 @@
         <div class="container">
           <!-- Title -->
           <h6 class="title title--overhead title--tail">
-            Desktop/Mobile Website
+            Digital Toolkit
           </h6>
           <h1 class="title title--display-1 js-words">
-            BBVA Brand Experience
+            Hackable Cities
           </h1>
           <!-- /Title -->
         </div>
@@ -117,22 +117,24 @@
         <!-- Details -->
         <div class="case-details">
           <div class="item-details">
-            <span class="item-details__title title--overhead">Team</span>
-            <span class="item-details__text"
-              >BBVA Brand Strategy & Marketing</span
-            >
-          </div>
-          <div class="item-details">
             <span class="item-details__title title--overhead">Date</span>
-            <span class="item-details__text">March 2017</span>
+            <span class="item-details__text">Feb 2014</span>
           </div>
           <div class="item-details">
             <span class="item-details__title title--overhead">Role</span>
-            <span class="item-details__text">UX & Visual Design</span>
+            <span class="item-details__text"
+              >Research & Visual Design Lead</span
+            >
+          </div>
+          <div class="item-details">
+            <!-- <span class="item-details__title title--overhead">Role</span>
+            <span class="item-details__text">Researcher & Lead Design</span> -->
           </div>
           <div class="item-details item-details--end">
-            <a class="btn-link" href="https://brand.bbvaexperience.com/en/"
-              >See Website<i class="circle circle--right icon-right-open"></i
+            <a
+              class="btn-link"
+              href="https://issuu.com/pgildner/docs/hackable-cities-pages"
+              >View Toolkit<i class="circle circle--right icon-right-open"></i
             ></a>
           </div>
         </div>
@@ -146,19 +148,18 @@
           </div>
           <div class="col-12 col-lg-9">
             <h2 class="title title--h4 js-lines">
-              Home to all of BBVA’s brand assets and marketing campaigns, BBVA's
-              Brand Experience contains dowloads to all assets and templates. It
-              is available to internal employees as well as approved external
-              vendors.
+              An easy to use toolkit for any member of a community looking to
+              revitalize his or her community.
             </h2>
-            <!-- <div class="description js-block">
+            <div class="description js-block">
               <p>
-                Home to all of BBVA’s brand assets and marketing campaigns,
-                BBVA's Brand Experience contains dowloads to all assets and
-                templates. It is available to internal employees as well as
-                approved external vendors.
+                Hackable Cities is designed as a step-by-step design-led process
+                to help people in neighborhoods and communities across the globe
+                re-imagine their local communities, re-invigorate their
+                neighborhoods, protect what is important to them, and empower
+                them to make the changes they desire.
               </p>
-            </div> -->
+            </div>
           </div>
         </div>
       </article>
@@ -264,13 +265,12 @@
 
       <!-- Page nav -->
       <nav class="page-nav">
-        <a class="btn-link" href="#"
-          ><i class="circle circle--left icon-left-open"></i>Prev project</a
+        <a class="btn-link" href="./train-scheduler.html"
+          ><i class="circle circle--left icon-left-open"></i>Prev: Train
+          Scheduler</a
         >
-        <a class="btn-link" href="../Smart Assistant/projects_single.html"
-          >Next: Smart Assistant<i
-            class="circle circle--right icon-right-open"
-          ></i
+        <a class="btn-link" href="./zona11.html"
+          >Next: Zona 11<i class="circle circle--right icon-right-open"></i
         ></a>
       </nav>
       <!-- /Page nav -->
