--- a/projects/zona11.html
+++ b/projects/zona11.html
@@ -22,35 +22,31 @@
     <link
       rel="apple-touch-icon"
       sizes="144x144"
-      href="../../assets/images/favicons/apple-touch-icon-144x144.png"
+      href="../assets/images/favicons/apple-touch-icon-144x144.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
-      href="../../assets/images/favicons/apple-touch-icon-114x114.png"
+      href="../assets/images/favicons/apple-touch-icon-114x114.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="72x72"
-      href="../../assets/images/favicons/apple-touch-icon-72x72.png"
+      href="../assets/images/favicons/apple-touch-icon-72x72.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
-      href="../../assets/images/favicons/apple-touch-icon-57x57.png"
+      href="../assets/images/favicons/apple-touch-icon-57x57.png"
     />
     <link
       rel="shortcut icon"
-      href="../../assets/images/favicons/favicon.png"
+      href="../assets/images/favicons/favicon.png"
       type="image/png"
     />
 
     <!-- Styles -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="../../assets/styles/style.css"
-    />
+    <link rel="stylesheet" type="text/css" href="../assets/styles/style.css" />
   </head>
   <body>
     <!-- Preloader -->
@@ -58,7 +54,7 @@
       <div class="preloader__wrap">
         <img
           class="preloader__logo"
-          src="../../assets/images/logo_white_preloader.svg"
+          src="../assets/images/logo_white_preloader.svg"
           alt="OGONNAYA"
         />
         <div class="preloader__progress"><span></span></div>
@@ -74,7 +70,7 @@
         <a class="logo-link" href="index.html">
           <img
             class="logotype"
-            src="../../assets/images/logo_white.svg"
+            src="../assets/images/logo_white.svg"
             alt="OGONNAYA"
           />
         </a>
@@ -93,10 +89,10 @@
         <div class="container">
           <!-- Title -->
           <h6 class="title title--overhead title--tail">
-            Desktop/Mobile Website
+            Digital & Revitalization Strategy
           </h6>
           <h1 class="title title--display-1 js-words">
-            BBVA Brand Experience
+            Zona 11
           </h1>
           <!-- /Title -->
         </div>
@@ -107,7 +103,7 @@
       <figure class="image-container jarallax reveal">
         <img
           class="jarallax-img cover"
-          src="../../assets/img/cover-project.jpg"
+          src="../assets/img/cover-project.jpg"
           alt=""
         />
       </figure>
@@ -117,22 +113,23 @@
         <!-- Details -->
         <div class="case-details">
           <div class="item-details">
-            <span class="item-details__title title--overhead">Team</span>
-            <span class="item-details__text"
-              >BBVA Brand Strategy & Marketing</span
-            >
-          </div>
-          <div class="item-details">
             <span class="item-details__title title--overhead">Date</span>
-            <span class="item-details__text">March 2017</span>
+            <span class="item-details__text">May 2014</span>
           </div>
           <div class="item-details">
             <span class="item-details__title title--overhead">Role</span>
-            <span class="item-details__text">UX & Visual Design</span>
+            <span class="item-details__text">Research & Strategy </span>
+          </div>
+          <div class="item-details">
+            <!-- <span class="item-details__title title--overhead">Role</span>
+            <span class="item-details__text">Researcher & Lead Design</span> -->
           </div>
           <div class="item-details item-details--end">
-            <a class="btn-link" href="https://brand.bbvaexperience.com/en/"
-              >See Website<i class="circle circle--right icon-right-open"></i
+            <a
+              class="btn-link"
+              target="_blank"
+              href="../assets/Eixample-Barcelona-Design_Strategy.pdf"
+              >View Proposal<i class="circle circle--right icon-right-open"></i
             ></a>
           </div>
         </div>
@@ -146,26 +143,26 @@
           </div>
           <div class="col-12 col-lg-9">
             <h2 class="title title--h4 js-lines">
-              Home to all of BBVA’s brand assets and marketing campaigns, BBVA's
-              Brand Experience contains dowloads to all assets and templates. It
-              is available to internal employees as well as approved external
-              vendors.
+              Reinventing the neighborhood experience and promoting economic
+              growth in Eixample, Barcelona.
             </h2>
-            <!-- <div class="description js-block">
+            <div class="description js-block">
               <p>
-                Home to all of BBVA’s brand assets and marketing campaigns,
-                BBVA's Brand Experience contains dowloads to all assets and
-                templates. It is available to internal employees as well as
-                approved external vendors.
+                The purpose of this project was to assess the current lifestyle
+                dimensions in and around the Eixample neighborhood above the Arc
+                de Trio, design strategies for creating a vibrant,
+                economically-strong neighborhood with a clear identity, and
+                develop an action plan and tactical recommendations to bring the
+                neighborhood vision to life.
               </p>
-            </div> -->
+            </div>
           </div>
         </div>
       </article>
 
       <!-- Image -->
       <figure class="image-container image-container--gutters reveal">
-        <img class="cover" src="../../assets/img/image_project_03.jpg" alt="" />
+        <img class="cover" src="../assets/img/image_project_03.jpg" alt="" />
       </figure>
       <!-- /Image -->
 
@@ -201,19 +198,19 @@
             <div class="swiper-slide">
               <div
                 class="cover-slider"
-                data-bg="../../assets/img/image_single_01.jpg"
+                data-bg="../assets/img/image_single_01.jpg"
               ></div>
             </div>
             <div class="swiper-slide">
               <div
                 class="cover-slider"
-                data-bg="../../assets/img/image_single_01.jpg"
+                data-bg="../assets/img/image_single_01.jpg"
               ></div>
             </div>
             <div class="swiper-slide">
               <div
                 class="cover-slider"
-                data-bg="../../assets/img/image_single_01.jpg"
+                data-bg="../assets/img/image_single_01.jpg"
               ></div>
             </div>
           </div>
@@ -258,17 +255,18 @@
 
       <!-- Image -->
       <figure class="image-container reveal">
-        <img class="cover" src="../../assets/img/image_project_07.jpg" alt="" />
+        <img class="cover" src="../assets/img/image_project_07.jpg" alt="" />
       </figure>
       <!-- /Image -->
 
       <!-- Page nav -->
       <nav class="page-nav">
-        <a class="btn-link" href="#"
-          ><i class="circle circle--left icon-left-open"></i>Prev project</a
+        <a class="btn-link" href="./hackable-cities.html"
+          ><i class="circle circle--left icon-left-open"></i>Prev: Hackable
+          Cities</a
         >
-        <a class="btn-link" href="../Smart Assistant/projects_single.html"
-          >Next: Smart Assistant<i
+        <a class="btn-link" href="./subway-study.html"
+          >Next: NYC Subway Study<i
             class="circle circle--right icon-right-open"
           ></i
         ></a>
