updated content on all project pages

--- a/contact.html
+++ b/contact.html
@@ -233,8 +233,8 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/common.js"></script>
 
-    <!-- Google Maps -->
+    <!-- Google Maps
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRGVSzcdx25I5nhL5gzJwnaw3Q5vDHiGI"></script>
-    <script src="assets/js/map.init.js"></script>
+    <script src="assets/js/map.init.js"></script> -->
   </body>
 </html>
