--- a/projects.html
+++ b/projects.html
@@ -125,12 +125,12 @@
           <figure class="item-news__media js-block">
             <img
               class="item-news__image"
-              src="assets/img/image_news_01.jpg"
+              src="assets/img/image_be_02"
               alt="News"
             />
           </figure>
           <div class="item-news__header js-block">
-            <div class="date">BBVA's Brand Experience</div>
+            <div class="date">BBVA Experience: Brand</div>
             <h2 class="title title--h5 item-news__title">
               <a href="./projects/brand.html"
                 ><span class="hover-line"
@@ -228,8 +228,8 @@
             <h2 class="title title--h5 item-news__title">
               <a href="./projects/crystal-collector.html"
                 ><span class="hover-line"
-                  >You are given a target score at the start of the game. Click
-                  on the crystals to reach the target score.</span
+                  >A random target score is generated at the beginning of the
+                  game. Click on the crystals to reach the target score.</span
                 ></a
               >
             </h2>
