--- a/projects/brand.html
+++ b/projects/brand.html
@@ -67,13 +67,13 @@
         <a class="btn-link" href="../projects.html"
           ><i class="circle icon-left-open"></i
         ></a>
-        <a class="logo-link" href="index.html">
+        <!-- <a class="logo-link" href="../index.html">
           <img
             class="logotype"
-            src="../assets/images/logo_white.svg"
+            src="../assets/images/logo.svg"
             alt="OGONNAYA"
           />
-        </a>
+        </a> -->
       </div>
       <div class="ml-sm-auto">
         <button class="hamburger zoom-cursor" type="button">
@@ -92,7 +92,7 @@
             Desktop/Mobile Website
           </h6>
           <h1 class="title title--display-1 js-words">
-            BBVA Brand Experience
+            BBVA's Brand Experience
           </h1>
           <!-- /Title -->
         </div>
@@ -103,7 +103,7 @@
       <figure class="image-container jarallax reveal">
         <img
           class="jarallax-img cover"
-          src="../assets/img/cover-project.jpg"
+          src="../assets/img/image_be_03.png"
           alt=""
         />
       </figure>
@@ -142,9 +142,9 @@
           </div>
           <div class="col-12 col-lg-9">
             <h2 class="title title--h4 js-lines">
-              Home to all of BBVA’s brand assets and marketing campaigns, BBVA's
-              Brand Experience contains dowloads to all assets and templates. It
-              is available to internal employees as well as approved external
+              Home to all of BBVA’s brand assets and marketing campaigns, Brand
+              Experience contains dowloads to all assets and templates. It is
+              available to internal employees as well as approved external
               vendors.
             </h2>
             <!-- <div class="description js-block">
