--- a/projects/smart-assistant.html
+++ b/projects/smart-assistant.html
@@ -90,7 +90,7 @@
           <!-- Title -->
           <h6 class="title title--overhead title--tail">Mobile App</h6>
           <h1 class="title title--display-1 js-words">
-            BBVA Smart Assistant
+            BBVA's Smart Assistant
           </h1>
           <!-- /Title -->
         </div>
@@ -101,7 +101,7 @@
       <figure class="image-container jarallax reveal">
         <img
           class="jarallax-img cover"
-          src="../assets/img/cover-project.jpg"
+          src="../assets/img/image_sa_02.jpg"
           alt=""
         />
       </figure>
