--- a/projects/zona11.html
+++ b/projects/zona11.html
@@ -103,7 +103,7 @@
       <figure class="image-container jarallax reveal">
         <img
           class="jarallax-img cover"
-          src="../assets/img/cover-project.jpg"
+          src="../assets/img/image_za_01.jpg"
           alt=""
         />
       </figure>
@@ -162,7 +162,7 @@
 
       <!-- Image -->
       <figure class="image-container image-container--gutters reveal">
-        <img class="cover" src="../assets/img/image_project_03.jpg" alt="" />
+        <img class="cover" src="../assets/img/image_za_02.png" alt="" />
       </figure>
       <!-- /Image -->
 
@@ -280,17 +280,17 @@
       <div class="menu-inner">
         <ul class="menu-list">
           <li>
-            <a class="menu-list__item" href="../../projects.html"
+            <a class="menu-list__item" href="../projects.html"
               ><span>projects</span></a
             >
           </li>
           <li>
-            <a class="menu-list__item" href="../../about.html"
+            <a class="menu-list__item" href="../about.html"
               ><span>about</span></a
             >
           </li>
           <li>
-            <a class="menu-list__item" href="../../contact.html"
+            <a class="menu-list__item" href="../contact.html"
               ><span>contact</span></a
             >
           </li>
@@ -300,7 +300,7 @@
         <a
           class="social__link"
           target="_blank"
-          href="./assets/Ogonnaya_UX_Designer.pdf"
+          href="../assets/Ogonnaya_UX_Designer.pdf"
           >RESUME</a
         >
         <a class="social__link" href="https://linkedin.com/in/okalu"
@@ -315,8 +315,8 @@
     <div class="cursor"></div>
 
     <!-- JavaScripts -->
-    <script src="../../assets/js/jquery-3.3.1.min.js"></script>
-    <script src="../../assets/js/plugins.js"></script>
-    <script src="../../assets/js/common.js"></script>
+    <script src="../assets/js/jquery-3.3.1.min.js"></script>
+    <script src="../assets/js/plugins.js"></script>
+    <script src="../assets/js/common.js"></script>
   </body>
 </html>
