--- a/projects/crystal-collector.html
+++ b/projects/crystal-collector.html
@@ -67,13 +67,13 @@
         <a class="btn-link" href="../projects.html"
           ><i class="circle icon-left-open"></i
         ></a>
-        <a class="logo-link" href="index.html">
+        <!-- <a class="logo-link" href="index.html">
           <img
             class="logotype"
             src="../assets/images/logo_white.svg"
             alt="OGONNAYA"
           />
-        </a>
+        </a> -->
       </div>
       <div class="ml-sm-auto">
         <button class="hamburger zoom-cursor" type="button">
@@ -100,13 +100,17 @@
       <!-- /Intro -->
 
       <!-- Image -->
-      <figure class="image-container jarallax reveal">
+      <!-- <figure class="image-container jarallax reveal">
+        <embed
+          src="https://ogonnaya.github.io/unit-4-game/"
+          style="width:100%; height: 100%;"
+        />
         <img
           class="jarallax-img cover"
-          src="../assets/img/cover-project.jpg"
-          alt=""
+          src="../assets/img/image_cc_01.jpg"
+          alt="Crystal Collector"
         />
-      </figure>
+      </figure> -->
       <!-- /Image -->
 
       <div class="container">
@@ -146,110 +150,17 @@
           </div>
           <div class="col-12 col-lg-9">
             <h2 class="title title--h4 js-lines">
-              Home to all of BBVA’s brand assets and marketing campaigns, BBVA's
-              Brand Experience contains dowloads to all assets and templates. It
-              is available to internal employees as well as approved external
-              vendors.
-            </h2>
-            <!-- <div class="description js-block">
-              <p>
-                Home to all of BBVA’s brand assets and marketing campaigns,
-                BBVA's Brand Experience contains dowloads to all assets and
-                templates. It is available to internal employees as well as
-                approved external vendors.
-              </p>
-            </div> -->
-          </div>
-        </div>
-      </article>
-
-      <!-- Image -->
-      <figure class="image-container image-container--gutters reveal">
-        <img class="cover" src="../assets/img/image_project_03.jpg" alt="" />
-      </figure>
-      <!-- /Image -->
-
-      <article class="caption-single container">
-        <div class="row">
-          <div class="col-12 col-lg-2">
-            <span class="num-article">02 —</span>
-          </div>
-          <div class="col-12 col-lg-9">
-            <h2 class="title title--h4 js-lines">
-              When you believe a thing, believe it all the way, implicitly and
-              unquestionably.
+              A random target score is generated at the beginning of the game.
+              Click on the crystals to reach the target score.
             </h2>
             <div class="description js-block">
               <p>
-                Good designers must always be avant-gardists, always one step
-                ahead of the times. They should–and must–question everything
-                generally thought to be obvious. They must have an intuition for
-                people’s changing attitudes. For the reality in which they live,
-                for their dreams, their desires, their worries, their needs,
-                their living habits. They must also be able to assess
-                realistically the opportunities and bounds of technology.
-              </p>
-            </div>
-          </div>
-        </div>
-      </article>
-
-      <!-- Slider -->
-      <div class="slider slider-simply image-container--half reveal">
-        <div class="slider-article swiper-container">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div
-                class="cover-slider"
-                data-bg="../assets/img/image_single_01.jpg"
-              ></div>
-            </div>
-            <div class="swiper-slide">
-              <div
-                class="cover-slider"
-                data-bg="../assets/img/image_single_01.jpg"
-              ></div>
-            </div>
-            <div class="swiper-slide">
-              <div
-                class="cover-slider"
-                data-bg="../assets/img/image_single_01.jpg"
-              ></div>
-            </div>
-          </div>
-        </div>
-
-        <div class="control-slider control-slider--bottom swiper-control">
-          <div
-            class="swiper-button-next swiper-button-next--square zoom-cursor"
-          >
-            <i class="icon-up-open"></i>
-          </div>
-          <div
-            class="swiper-button-prev swiper-button-prev--square zoom-cursor"
-          >
-            <i class="icon-down-open"></i>
-          </div>
-        </div>
-      </div>
-      <!-- /Slider -->
-
-      <article class="caption-single container">
-        <div class="row">
-          <div class="col-12 col-lg-2">
-            <span class="num-article">03 —</span>
-          </div>
-          <div class="col-12 col-lg-9">
-            <h2 class="title title--h4 js-lines">
-              Design is a solution to a problem. Art is a question to a problem.
-            </h2>
-            <div class="description js-block">
-              <p>
-                The future belongs to a different kind of person with a
-                different kind of mind: artists, inventors,
-                storytellers-creative and holistic ‘right-brain’ thinkers whose
-                abilities mark the fault line between who gets ahead and who
-                doesn’t.
+                The value of each of the four crystals in the game changes every
+                time a new game starts. The value of each crystal is hidden from
+                you until you click on it. Clicking on a crystal will add a
+                specific amount of points to your total score. You win the game
+                by matching your total score to the target score. You lose the
+                game if your total score goes above the random number.
               </p>
             </div>
           </div>
@@ -257,8 +168,8 @@
       </article>
 
       <!-- Image -->
-      <figure class="image-container reveal">
-        <img class="cover" src="../assets/img/image_project_07.jpg" alt="" />
+      <figure class="image-container image-container--gutters reveal">
+        <img class="cover" src="../assets/img/image_cc_05.png" alt="" />
       </figure>
       <!-- /Image -->
 
