updated content on train scheduler, crystal collector and trivia game

--- a/projects/crystal-collector.html
+++ b/projects/crystal-collector.html
@@ -129,13 +129,18 @@
             >
           </div>
           <div class="item-details">
-            <span class="item-details__title title--overhead">View Code</span>
+            <span target="_blank" class="item-details__title title--overhead"
+              >View Code</span
+            >
             <a href="https://github.com/Ogonnaya/unit-4-game"
               ><span class="item-details__text">Github</span></a
             >
           </div>
           <div class="item-details item-details--end">
-            <a class="btn-link" href="https://ogonnaya.github.io/unit-4-game/"
+            <a
+              target="_blank"
+              class="btn-link"
+              href="https://ogonnaya.github.io/unit-4-game/"
               >See Website<i class="circle circle--right icon-right-open"></i
             ></a>
           </div>
