--- a/projects/train-scheduler.html
+++ b/projects/train-scheduler.html
@@ -1,234 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>OGONNAYA – UX, Visual Design & Development</title>
 
-    <!-- Meta Data -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="format-detection" content="address=no" />
-    <meta name="author" content="Ogonnaya" />
-    <meta
-      name="description"
-      content="Research, UX, Visual Design, and Programming Portfolio."
-    />
+<head>
+  <meta charset="utf-8" />
+  <title>OGONNAYA – UX, Visual Design & Development</title>
 
-    <!-- Favicons -->
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="../assets/images/favicons/apple-touch-icon-144x144.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="../assets/images/favicons/apple-touch-icon-114x114.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="../assets/images/favicons/apple-touch-icon-72x72.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="57x57"
-      href="../assets/images/favicons/apple-touch-icon-57x57.png"
-    />
-    <link
-      rel="shortcut icon"
-      href="../assets/images/favicons/favicon.png"
-      type="image/png"
-    />
+  <!-- Meta Data -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="format-detection" content="address=no" />
+  <meta name="author" content="Ogonnaya" />
+  <meta name="description" content="Research, UX, Visual Design, and Programming Portfolio." />
 
-    <!-- Styles -->
-    <link rel="stylesheet" type="text/css" href="../assets/styles/style.css" />
-  </head>
-  <body>
-    <!-- Preloader -->
-    <div class="preloader">
-      <div class="preloader__wrap">
-        <img
-          class="preloader__logo"
-          src="../assets/images/logo_white_preloader.svg"
-          alt="OGONNAYA"
-        />
-        <div class="preloader__progress"><span></span></div>
-      </div>
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="144x144" href="../assets/images/favicons/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="../assets/images/favicons/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="../assets/images/favicons/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="57x57" href="../assets/images/favicons/apple-touch-icon-57x57.png" />
+  <link rel="shortcut icon" href="../assets/images/favicons/favicon.png" type="image/png" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" type="text/css" href="../assets/styles/style.css" />
+</head>
+
+<body>
+  <!-- Preloader -->
+  <div class="preloader">
+    <div class="preloader__wrap">
+      <img class="preloader__logo" src="../assets/images/logo_white_preloader.svg" alt="OGONNAYA" />
+      <div class="preloader__progress"><span></span></div>
     </div>
+  </div>
 
-    <!-- Top -->
-    <nav class="navbar navbar-back">
-      <div class="mr-auto logo-container">
-        <a class="btn-link" href="../projects.html"
-          ><i class="circle icon-left-open"></i
-        ></a>
-        <a class="logo-link" href="index.html">
+  <!-- Top -->
+  <nav class="navbar navbar-back">
+    <div class="mr-auto logo-container">
+      <a class="btn-link" href="../projects.html"><i class="circle icon-left-open"></i></a>
+      <!-- <a class="logo-link" href="index.html">
           <img
             class="logotype"
             src="../assets/images/logo_white.svg"
             alt="OGONNAYA"
-          />
-        </a>
-      </div>
-      <div class="ml-sm-auto">
-        <button class="hamburger zoom-cursor" type="button">
-          <span class="hamburger__inner"></span>
-        </button>
-      </div>
-    </nav>
-    <!-- /Top -->
+          /> -->
+      </a>
+    </div>
+    <div class="ml-sm-auto">
+      <button class="hamburger zoom-cursor" type="button">
+        <span class="hamburger__inner"></span>
+      </button>
+    </div>
+  </nav>
+  <!-- /Top -->
 
-    <section class="project-single">
-      <!-- Intro -->
-      <header class="header-page header-page--half js-opacity">
-        <div class="container">
-          <!-- Title -->
-          <h6 class="title title--overhead title--tail">
-            Website
-          </h6>
-          <h1 class="title title--display-1 js-words">
-            Train Scheduler
-          </h1>
-          <!-- /Title -->
-        </div>
-      </header>
-      <!-- /Intro -->
+  <section class="project-single">
+    <!-- Intro -->
+    <header class="header-page header-page--half js-opacity">
+      <div class="container">
+        <!-- Title -->
+        <h6 class="title title--overhead title--tail">
+          Website
+        </h6>
+        <h1 class="title title--display-1 js-words">
+          Train Scheduler
+        </h1>
+        <!-- /Title -->
+      </div>
+    </header>
+    <!-- /Intro -->
 
-      <!-- Image -->
-      <!-- <figure class="image-container jarallax reveal">
+    <!-- Image -->
+    <!-- <figure class="image-container jarallax reveal">
         <img
           class="jarallax-img cover"
           src="../assets/img/cover-project.jpg"
           alt=""
         />
       </figure> -->
-      <!-- /Image -->
+    <!-- /Image -->
 
-      <div class="container">
-        <!-- Details -->
-        <div class="case-details">
-          <div class="item-details">
-            <span class="item-details__title title--overhead">Date</span>
-            <span class="item-details__text">Nov 2019</span>
-          </div>
-          <div class="item-details">
-            <span class="item-details__title title--overhead"
-              >Technologies Used</span
-            >
-            <span class="item-details__text"
-              >HTML/CSS, Bootstrap, Javascript, jQuery</span
-            >
-          </div>
-          <div class="item-details">
-            <span class="item-details__title title--overhead">View Code</span>
-            <a href="https://github.com/Ogonnaya/train-scheduler"
-              ><span class="item-details__text">Github</span></a
-            >
-          </div>
-          <div class="item-details item-details--end">
-            <a
-              class="btn-link"
-              href="https://ogonnaya.github.io/train-scheduler/"
-              >See Website<i class="circle circle--right icon-right-open"></i
-            ></a>
-          </div>
+    <div class="container">
+      <!-- Details -->
+      <div class="case-details">
+        <div class="item-details">
+          <span class="item-details__title title--overhead">Date</span>
+          <span class="item-details__text">Nov 2019</span>
         </div>
-        <!-- /Details -->
-      </div>
-
-      <article class="caption-single container">
-        <div class="row">
-          <div class="col-12 col-lg-2">
-            <span class="num-article">OVERVIEW —</span>
-          </div>
-          <div class="col-12 col-lg-9">
-            <h2 class="title title--h4 js-lines">
-              Home to all of BBVA’s brand assets and marketing campaigns, BBVA's
-              Brand Experience contains dowloads to all assets and templates. It
-              is available to internal employees as well as approved external
-              vendors.
-            </h2>
-            <!-- <div class="description js-block">
-              <p>
-                Home to all of BBVA’s brand assets and marketing campaigns,
-                BBVA's Brand Experience contains dowloads to all assets and
-                templates. It is available to internal employees as well as
-                approved external vendors.
-              </p>
-            </div> -->
-          </div>
+        <div class="item-details">
+          <span class="item-details__title title--overhead">Technologies Used</span>
+          <span class="item-details__text">HTML/CSS, Bootstrap, Javascript, jQuery, Firebase, Moment.js</span>
         </div>
-      </article>
-
-      <!-- Image -->
-      <figure class="image-container image-container--gutters reveal">
-        <img class="cover" src="../assets/img/image_project_03.jpg" alt="" />
-      </figure>
-      <!-- /Image -->
-
-      <!-- Page nav -->
-      <nav class="page-nav">
-        <a class="btn-link" href="./trivia.html"
-          ><i class="circle circle--left icon-left-open"></i>Prev: Random
-          Trivia</a
-        >
-        <a class="btn-link" href="./hackable-cities.html"
-          >Next: Hackable Cities<i
-            class="circle circle--right icon-right-open"
-          ></i
-        ></a>
-      </nav>
-      <!-- /Page nav -->
-    </section>
-    <!-- /Intro -->
-
-    <!-- Menu -->
-    <div class="menu">
-      <div class="menu-inner">
-        <ul class="menu-list">
-          <li>
-            <a class="menu-list__item" href="../projects.html"
-              ><span>projects</span></a
-            >
-          </li>
-          <li>
-            <a class="menu-list__item" href="../about.html"
-              ><span>about</span></a
-            >
-          </li>
-          <li>
-            <a class="menu-list__item" href="../contact.html"
-              ><span>contact</span></a
-            >
-          </li>
-        </ul>
+        <div class="item-details">
+          <span target="_blank" class="item-details__title title--overhead">View Code</span>
+          <a href="https://github.com/Ogonnaya/train-scheduler"><span class="item-details__text">Github</span></a>
+        </div>
+        <div class="item-details item-details--end">
+          <a target="_blank" class="btn-link" href="https://ogonnaya.github.io/train-scheduler/">See Website<i
+              class="circle circle--right icon-right-open"></i></a>
+        </div>
       </div>
-      <div class="social social--white">
-        <a
-          class="social__link"
-          target="_blank"
-          href="../assets/Ogonnaya_UX_Designer.pdf"
-          >RESUME</a
-        >
-        <a class="social__link" href="https://linkedin.com/in/okalu"
-          >LINKEDIN</a
-        >
-        <a class="social__link" href="https://github.com/Ogonnaya">GITHUB</a>
-      </div>
+      <!-- /Details -->
     </div>
-    <div class="ef-background"></div>
-    <!-- /Menu -->
 
-    <div class="cursor"></div>
+    <article class="caption-single container">
+      <div class="row">
+        <div class="col-12 col-lg-2">
+          <span class="num-article">OVERVIEW —</span>
+        </div>
+        <div class="col-12 col-lg-9">
+          <h2 class="title title--h4 js-lines">
+            Add a train to the schedule to see what time the next train arrives and how many minutes away the train is.
+          </h2>
+          <div class="description js-block">
+            <p>
+              This website will provides up-to-date information about various trains, namely their arrival times and how
+              many minutes remain until they arrive at their station.
+            </p>
+          </div>
+        </div>
+      </div>
+    </article>
 
-    <!-- JavaScripts -->
-    <script src="../assets/js/jquery-3.3.1.min.js"></script>
-    <script src="../assets/js/plugins.js"></script>
-    <script src="../assets/js/common.js"></script>
-  </body>
+    <!-- Image -->
+    <figure class="image-container image-container--gutters reveal">
+      <img class="cover" src="../assets/img/image_ts_02.png" alt="" />
+    </figure>
+    <!-- /Image -->
+
+    <!-- Page nav -->
+    <nav class="page-nav">
+      <a class="btn-link" href="./trivia.html"><i class="circle circle--left icon-left-open"></i>Prev: Random
+        Trivia</a>
+      <a class="btn-link" href="./hackable-cities.html">Next: Hackable Cities<i
+          class="circle circle--right icon-right-open"></i></a>
+    </nav>
+    <!-- /Page nav -->
+  </section>
+  <!-- /Intro -->
+
+  <!-- Menu -->
+  <div class="menu">
+    <div class="menu-inner">
+      <ul class="menu-list">
+        <li>
+          <a class="menu-list__item" href="../projects.html"><span>projects</span></a>
+        </li>
+        <li>
+          <a class="menu-list__item" href="../about.html"><span>about</span></a>
+        </li>
+        <li>
+          <a class="menu-list__item" href="../contact.html"><span>contact</span></a>
+        </li>
+      </ul>
+    </div>
+    <div class="social social--white">
+      <a class="social__link" target="_blank" href="../assets/Ogonnaya_UX_Designer.pdf">RESUME</a>
+      <a class="social__link" href="https://linkedin.com/in/okalu">LINKEDIN</a>
+      <a class="social__link" href="https://github.com/Ogonnaya">GITHUB</a>
+    </div>
+  </div>
+  <div class="ef-background"></div>
+  <!-- /Menu -->
+
+  <div class="cursor"></div>
+
+  <!-- JavaScripts -->
+  <script src="../assets/js/jquery-3.3.1.min.js"></script>
+  <script src="../assets/js/plugins.js"></script>
+  <script src="../assets/js/common.js"></script>
+</body>
+
 </html>
