--- a/projects/trivia.html
+++ b/projects/trivia.html
@@ -124,12 +124,15 @@
           </div>
           <div class="item-details">
             <span class="item-details__title title--overhead">View Code</span>
-            <a href="https://github.com/Ogonnaya/TriviaGame"
+            <a target="_blank" href="https://github.com/Ogonnaya/TriviaGame"
               ><span class="item-details__text">Github</span></a
             >
           </div>
           <div class="item-details item-details--end">
-            <a class="btn-link" href=" https://ogonnaya.github.io/TriviaGame/"
+            <a
+              target="_blank"
+              class="btn-link"
+              href=" https://ogonnaya.github.io/TriviaGame/"
               >See Website<i class="circle circle--right icon-right-open"></i
             ></a>
           </div>
@@ -144,26 +147,26 @@
           </div>
           <div class="col-12 col-lg-9">
             <h2 class="title title--h4 js-lines">
-              Home to all of BBVA’s brand assets and marketing campaigns, BBVA's
-              Brand Experience contains dowloads to all assets and templates. It
-              is available to internal employees as well as approved external
-              vendors.
+              From tricky riddles to geography questions, this trivia game has
+              no specific theme. See how you fare against these challenging
+              trivia questions.
             </h2>
-            <!-- <div class="description js-block">
+            <div class="description js-block">
               <p>
-                Home to all of BBVA’s brand assets and marketing campaigns,
-                BBVA's Brand Experience contains dowloads to all assets and
-                templates. It is available to internal employees as well as
-                approved external vendors.
+                In this game, you'll be shown one question at a time. If you
+                answer correctly, you'll move on to the next question. If you
+                choose the wrong answer, you'll be shown the correct answer and
+                then the next question. When all questions have been answered,
+                you'll see how many you got right, and how many you got wrong.
               </p>
-            </div> -->
+            </div>
           </div>
         </div>
       </article>
 
       <!-- Image -->
       <figure class="image-container image-container--gutters reveal">
-        <img class="cover" src="../assets/img/image_project_03.jpg" alt="" />
+        <img class="cover" src="../assets/img/image_rt_02.png" alt="" />
       </figure>
       <!-- /Image -->
 
