adding cntent to project pages

--- a/about.html
+++ b/about.html
@@ -179,9 +179,10 @@
         </div>
         <div class="col-12 col-lg-9">
           <h2 class="title title--h4 js-lines">
-            At my core, I consider myself a problem solver. Using research,
-            design thinking and a little creativity, any problem is my next
-            opportunity.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+            impedit incidunt alias distinctio, deleniti ipsum consequuntur
+            adipisci sit laudantium modi id hic quia eligendi maxime nemo,
+            labore nihil sapiente unde.
           </h2>
           <div class="description js-block">
             <p class="paragraph">
