--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                   <p class="description">
                     <span class="down-up"
                       ><span
-                        >Photography is a way of feeling, of touching, of
-                        loving. What you have caught on film is captured
-                        forever… It remembers little things, long after you have
-                        forgotten everything.</span
+                        >Home to all of BBVA’s brand assets and marketing
+                        campaigns, Brand Experience contains dowloads to all
+                        assets and templates. It is available to internal
+                        employees as well as approved external vendors.</span
                       ></span
                     >
                   </p>
@@ -134,10 +134,9 @@
                   <p class="description">
                     <span class="down-up"
                       ><span
-                        >Photography is a way of feeling, of touching, of
-                        loving. What you have caught on film is captured
-                        forever… It remembers little things, long after you have
-                        forgotten everything.</span
+                        >An advanced digital banker focused on assisting clients
+                        with everyday financial transactions and
+                        decisions.</span
                       ></span
                     >
                   </p>
@@ -168,10 +167,9 @@
                   <p class="description">
                     <span class="down-up"
                       ><span
-                        >Photography is a way of feeling, of touching, of
-                        loving. What you have caught on film is captured
-                        forever… It remembers little things, long after you have
-                        forgotten everything.</span
+                        >Whether buying, building or refinancing a home, BBVA
+                        offers an online mortgage application tailored to your
+                        needs.</span
                       ></span
                     >
                   </p>
