--- a/projects/zona11.html
+++ b/projects/zona11.html
@@ -64,10 +64,10 @@
     <!-- Top -->
     <nav class="navbar navbar-back">
       <div class="mr-auto logo-container">
-        <a class="btn-link" href="../../projects.html"
+        <a class="btn-link" href="../projects.html"
           ><i class="circle icon-left-open"></i
         ></a>
-        <a class="logo-link" href="index.html">
+        <a class="logo-link" href="../index.html">
           <img
             class="logotype"
             src="../assets/images/logo_white.svg"
@@ -139,7 +139,7 @@
       <article class="caption-single container">
         <div class="row">
           <div class="col-12 col-lg-2">
-            <span class="num-article">OVERVIEW —</span>
+            <span class="num-article">THE CHALLENGE —</span>
           </div>
           <div class="col-12 col-lg-9">
             <h2 class="title title--h4 js-lines">
@@ -168,25 +168,74 @@
 
       <article class="caption-single container">
         <div class="row">
-          <div class="col-12 col-lg-2">
-            <span class="num-article">02 —</span>
+          <div class="col-12 col-lg-3">
+            <span class="num-article">Project Goals —</span>
           </div>
-          <div class="col-12 col-lg-9">
-            <h2 class="title title--h4 js-lines">
-              When you believe a thing, believe it all the way, implicitly and
-              unquestionably.
-            </h2>
-            <div class="description js-block">
+
+          <div class="col-9 col-md-6 col-lg-4">
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Create a recognized identity and revitalize this portion of
+                  Eixample
+                </li>
+              </h5>
+            </ul>
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Transform Eixample into a creative district
+                </li>
+              </h5>
+            </ul>
+          </div>
+          <div class="col-12 col-md-6 col-lg-5">
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Create and foster a strong local community and build networks
+                </li>
+              </h5>
+            </ul>
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Position Eixample locally and globally
+                </li>
+              </h5>
+            </ul>
+          </div>
+          <div class="col-12 col-md-6 col-lg-5">
+            <ul class="list-unstyled">
+              <!-- <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Create and foster a strong local community and build networks
+                </li>
+              </h5>
+            </ul>
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Position Eixample locally and globally
+                </li>
+              </h5> -->
+            </ul>
+          </div>
+        </div>
+      </article>
+
+      <!-- Quote -->
+      <article class="caption-single container">
+        <div class="row">
+          <div class="col-12 col-lg-12">
+            <blockquote class="block-quote">
               <p>
-                Good designers must always be avant-gardists, always one step
-                ahead of the times. They should–and must–question everything
-                generally thought to be obvious. They must have an intuition for
-                people’s changing attitudes. For the reality in which they live,
-                for their dreams, their desires, their worries, their needs,
-                their living habits. They must also be able to assess
-                realistically the opportunities and bounds of technology.
+                The goal of a designer is to listen, observe, understand,
+                sympathize, empathize, synthesize, and glean insights that
+                enable him or her to make the invisible visible.
               </p>
-            </div>
+              <cite>Andrew Grove</cite>
+            </blockquote>
           </div>
         </div>
       </article>
@@ -198,19 +247,43 @@
             <div class="swiper-slide">
               <div
                 class="cover-slider"
-                data-bg="../assets/img/image_single_01.jpg"
+                data-bg="../projects/images/zona11/01.jpg"
               ></div>
             </div>
             <div class="swiper-slide">
               <div
                 class="cover-slider"
-                data-bg="../assets/img/image_single_01.jpg"
+                data-bg="../projects/images/zona11/02.jpg"
               ></div>
             </div>
             <div class="swiper-slide">
               <div
                 class="cover-slider"
-                data-bg="../assets/img/image_single_01.jpg"
+                data-bg="../projects/images/zona11/03.jpg"
+              ></div>
+            </div>
+            <div class="swiper-slide">
+              <div
+                class="cover-slider"
+                data-bg="../projects/images/zona11/04.jpg"
+              ></div>
+            </div>
+            <div class="swiper-slide">
+              <div
+                class="cover-slider"
+                data-bg="../projects/images/zona11/05.jpg"
+              ></div>
+            </div>
+            <div class="swiper-slide">
+              <div
+                class="cover-slider"
+                data-bg="../projects/images/zona11/06.jpg"
+              ></div>
+            </div>
+            <div class="swiper-slide">
+              <div
+                class="cover-slider"
+                data-bg="../projects/images/zona11/07.jpg"
               ></div>
             </div>
           </div>
@@ -231,27 +304,84 @@
       </div>
       <!-- /Slider -->
 
+      <!-- Research methods -->
+
       <article class="caption-single container">
         <div class="row">
-          <div class="col-12 col-lg-2">
-            <span class="num-article">03 —</span>
+          <div class="col-12 col-lg-3">
+            <span class="num-article">Research Methods —</span>
           </div>
-          <div class="col-12 col-lg-9">
-            <h2 class="title title--h4 js-lines">
-              Design is a solution to a problem. Art is a question to a problem.
-            </h2>
-            <div class="description js-block">
-              <p>
-                The future belongs to a different kind of person with a
-                different kind of mind: artists, inventors,
-                storytellers-creative and holistic ‘right-brain’ thinkers whose
-                abilities mark the fault line between who gets ahead and who
-                doesn’t.
-              </p>
-            </div>
+
+          <div class="col-9 col-md-3 col-lg-3">
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Case Studies
+                </li>
+              </h5>
+            </ul>
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Resident Interviews
+                </li>
+              </h5>
+            </ul>
+          </div>
+          <div class="col-12 col-md-3 col-lg-3">
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Stakeholder Mapping
+                </li>
+              </h5>
+            </ul>
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Surveys
+                </li>
+              </h5>
+            </ul>
+          </div>
+          <div class="col-12 col-md-3 col-lg-3">
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Personas
+                </li>
+              </h5>
+            </ul>
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Prototyping
+                </li>
+              </h5>
+            </ul>
+          </div>
+          <div class="col-12 col-md-6 col-lg-5">
+            <ul class="list-unstyled">
+              <!-- <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Create and foster a strong local community and build networks
+                </li>
+              </h5>
+            </ul>
+            <ul class="list-unstyled">
+              <h5 class="title title--h6 title--subtitle">
+                <li>
+                  Position Eixample locally and globally
+                </li>
+              </h5> -->
+            </ul>
           </div>
         </div>
       </article>
+
+      <!-- WeDo -->
+
+      <!-- /WeDo -->
 
       <!-- Image -->
       <figure class="image-container reveal">
