--- a/projects/brand.html
+++ b/projects/brand.html
@@ -67,13 +67,13 @@
         <a class="btn-link" href="../projects.html"
           ><i class="circle icon-left-open"></i
         ></a>
-        <!-- <a class="logo-link" href="../index.html">
+        <a class="logo-link" href="../index.html">
           <img
             class="logotype"
-            src="../assets/images/logo.svg"
+            src="../assets/images/logo_white.svg"
             alt="OGONNAYA"
           />
-        </a> -->
+        </a>
       </div>
       <div class="ml-sm-auto">
         <button class="hamburger zoom-cursor" type="button">
