updated about me page

--- a/about.html
+++ b/about.html
@@ -179,10 +179,10 @@
         </div>
         <div class="col-12 col-lg-9">
           <h2 class="title title--h4 js-lines">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-            impedit incidunt alias distinctio, deleniti ipsum consequuntur
-            adipisci sit laudantium modi id hic quia eligendi maxime nemo,
-            labore nihil sapiente unde.
+            It is not enough that we build products that function, that are
+            understandable and usable, we also need to build products that bring
+            joy and excitement, pleasure and fun, and, yes, beauty to people’s
+            lives.
           </h2>
           <div class="description js-block">
             <p class="paragraph">
